--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ b {
 
 .author {
     font-size: 0.7em;
-    color: #a0a0a0;
+    color: #d3d3d3;
     position: absolute;
     bottom: 4px;
     left: 50%;
